--- a/dada/templates/change_password_screen.tmpl
+++ b/dada/templates/change_password_screen.tmpl
@@ -17,10 +17,9 @@
 
 
 
-
-<div class="clearskiesbox">
+<div class="alert-box secondary">
     
-    <!-- tmpl_if root_Login --> 
+    <!-- tmpl_if root_login --> 
     
         <p>
             The <strong>List Password</strong> is used to log into the mailing list, with restricted permissions 
@@ -38,48 +37,69 @@
 </p>
 </div>
 
-<form name="change_password_form" id="change_password_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
-
-
 <fieldset> 
+    
+    <form name="change_password_form" id="change_password_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->"> 
+        <input type="hidden" name="flavor"       value="change_password" />
+        <input type="hidden" name="process" value="1" />
 
+    <!-- tmpl_unless root_login -->
+
+        <div class="row">
+          <div class="small-8">
+            <div class="row">
+              <div class="small-3 columns">
+                   <label for="old_password" class="right">
+                       Your List Password
+                  </label> 
+              </div>
+              <div class="small-9 columns">
+                  <input type="password" id="old_password" name="old_password" maxlength="24" />
+              </div>
+            </div>
+          </div>
+        </div>
+
+    <!--/tmpl_unless-->
+
+
+    <div class="row">
+      <div class="small-8">
+        <div class="row">
+          <div class="small-3 columns">
+              <label for="new_password" class="right">
+                  List Password
+              </label> 
+          </div>
+          <div class="small-9 columns">
+             <input type="password" name="new_password" id="new_password"  maxlength="24" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="small-8">
+        <div class="row">
+          <div class="small-3 columns">
+              <label for="again_new_password" class="right">
+                  Re-enter List Password
+              </label> 
+          </div>
+          <div class="small-9 columns">
+              <input type="password" name="again_new_password" id="again_new_password" maxlength="24" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    </fieldset> 
 	
-<input type="hidden" name="flavor"       value="change_password" />
-<input type="hidden" name="process" value="1" />
-
-<!-- tmpl_unless root_login -->
-	
-	<p>
-	 Enter the current <label for="old_password">List Password</label>:
-	 <br />
-	 <input type="password" id="old_password" name="old_password" maxlength="24" />
-	</p>
-	
-<!--/tmpl_unless-->
-
-<p>
- <label for="new_password">
-  Enter the new List Password</label>:
- <br />
- <input type="password" name="new_password" id="new_password" size="16" maxlength="24" />
-</p>
-
-<p>
- <label for="again_new_password">
-  Re-enter the new List Password</label>:
- <br />
- <input type="password" name="again_new_password" id="again_new_password" size="16" maxlength="24" />
-</p>
-
-
-
-</fieldset> 
-	
-<div class="buttonfloat">
- <input type="reset"  class="cautionary" />
- <input type="submit" class="processing" value="Change Password" />
-</div>
-<div class="floatclear"></div>
+    <ul class="button-group round right">    
+     <li><input type="reset"  class="button cautionary" /></li>
+     <li><input type="submit" class="button processing" value="Change Password" /></li>
+    </ul> 
 
 </form> 
 
