--- a/dada/templates/send_email_screen.tmpl
+++ b/dada/templates/send_email_screen.tmpl
@@ -32,6 +32,14 @@
 
 <form name="mass_mailing" id="mass_mailing" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"  accept-charset="<!-- tmpl_var HTML_CHARSET -->">
 
+    <div data-magellan-expedition="fixed">
+      <dl class="sub-nav">
+          <div id="button_toolbar">
+              <input type="button" value="Loading..." class="bigger_button" />
+        </div>
+      </div>
+    </div>
+    
 <div id="entire_form">
   <div id="form_widgets">
 
@@ -217,13 +225,6 @@
 </div>
 
 
-<div id="top_floating_button_wrapper">
-  <div id="buttons">
-      <div id="button_toolbar">
-          <input type="button" value="Loading..." class="bigger_button" />
-    </div>
-  </div>
-</div>
 
 </div>
 
