--- a/dada/static/css/dada_mail.css
+++ b/dada/static/css/dada_mail.css
@@ -4,16 +4,17 @@ html {
 	padding: 0;
 }
 body {
+    background:#ededed;
 }
 
 #Dada { 
-    margin: 0;
-	padding: 0;
-	background-color: #fff;
-	font-family: Helvetica,Verdana,Arial,sans-serif;
-	line-height: 1.50em;
-	font-size: .8em;
-	background: #fff;	
+//    margin: 0;
+//	padding: 0;
+//	background-color: #fff;
+//	font-family: Helvetica,Verdana,Arial,sans-serif;
+//	line-height: 1.50em;
+//	font-size: .8em;
+//	background: #fff;	
 }
 
 /* ----- IDS: General Page Layout ----- */
@@ -51,6 +52,20 @@ html, body {
 	text-shadow: 1px 1px 2px #330033;
 }
 
+
+#admin_header { 
+
+/*
+    background-color: #669999;
+	background-image: url('../images/header_bg.gif');
+	background-repeat: repeat-y;
+	font-size: 1.1em;
+	font-family: "Century Gothic", CenturyGothic, "AppleGothic", "Avant Garde", Avantgarde, sans-serif;	
+*/
+}
+
+/*
+
 #Dada #Header img { 
  border:0px; 	
 }
@@ -78,6 +93,7 @@ html, body {
 	color: #fff;
 	text-decoration: underline;
 }
+*/
 
 /* non-admin */
 #Dada #Content {
@@ -426,7 +442,7 @@ color: #000;
 
 //#Dada textarea,
 
-#Dada select,
+//#Dada select,
 #Dada .fake_input {
     width: auto;
 	margin: 3px;
@@ -451,7 +467,8 @@ color: #000;
     min-height:50px;
     background: transparent url('../images/spinner.gif') 50% 0 no-repeat;
 }
-#Dada #Header select { 
+
+/*#Dada #Header select { 
 	font-size: .8em;
 	font-family: "Century Gothic", CenturyGothic, "AppleGothic", "Avant Garde", Avantgarde, sans-serif;
 	width: 150px;
@@ -459,6 +476,7 @@ color: #000;
 	margin: 0px;
 	padding: 1px;
 }
+*/
 
 #Dada #Header .select2-container
  {
@@ -488,7 +506,8 @@ color: #000;
 }
 
 
-/* affects buttons only: */
+/*
+// affects buttons only:
 #Dada input[type="submit"],
 #Dada input[type="button"],
 #Dada input[type="reset"],
@@ -510,6 +529,7 @@ color: #000;
 	background-color: #ededed;
 }
 
+*/
 #Dada input.small_button {
 	margin: 1px;
 	padding: 2px;
@@ -799,6 +819,7 @@ line-height: 13px;
 	line-height: 200%;
 }
 
+/*
 #Dada #screentitle {
 	width: 100%;
 	height: 25px;
@@ -809,9 +830,6 @@ line-height: 13px;
 	font-size: 1em;
 	font-family: "Century Gothic", CenturyGothic, "AppleGothic", "Avant Garde", Avantgarde, sans-serif;
 	text-shadow: 1px 1px 2px #330033;
-	
-	
-	
 }
 #Dada #screentitle a,
 #Dada #screentitle hover,
@@ -819,12 +837,13 @@ line-height: 13px;
 #Dada #screentitle visited {
 	color: #fff;
 }
-
+*/
+/*
 #Dada #screentitlepadding {
 	float: left;
 	padding: 3px;
 }
-
+*/
 
 /*
 #Dada #navcontainer {
